--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hyperdrive": "^10.21.0",
     "hyperswarm": "^2.15.3",
     "length-prefixed-stream": "^2.0.0",
+    "mime": "^3.0.0",
     "minimist": "^1.2.5",
     "pump": "^3.0.0",
     "random-access-file": "^2.2.0"
